--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,21 +89,22 @@ services:
     image: python:3.11-slim
     container_name: streamlit
     working_dir: /app
-    command: bash -lc "pip install -r forecasting/requirements-analytics.txt && streamlit run forecasting/streamlit_app.py --server.port=8501 --server.address=0.0.0.0"
+    command: bash -lc "pip install -r requirements.txt && streamlit run forecasting/streamlit_app.py --server.port=8501 --server.address=0.0.0.0"
     volumes:
       - ./:/app
     environment:
       - CASSANDRA_HOSTS=cassandra-dev
       - CASSANDRA_PORT=9042
-      - CASSANDRA_KEYSPACE=linkedin_jobs   # <-- change to your real keyspace
-      - CASSANDRA_TABLE=jobs               # <-- change to your real table
+      - CASSANDRA_KEYSPACE=linkedin_jobs        # ✅ your real keyspace
+      - CASSANDRA_TABLE=jobs  # ✅ your real table
     ports:
       - "8501:8501"
     depends_on:
       cassandra-dev:
         condition: service_healthy
     networks:
-      - cassandra-net
+       - cassandra-net
+
 
 
 volumes:
@@ -112,6 +113,7 @@ volumes:
 networks:
   cassandra-net:
     driver: bridge
+
 
 # To start:
 # docker-compose -f docker-compose.yml up -d
