--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,9 +85,9 @@ services:
     networks:
       - cassandra-net
   
-  streamlit:
+  python-app:
     image: python:3.11-slim
-    container_name: streamlit
+    container_name: python-app
     working_dir: /app
     command: bash -lc "pip install -r requirements.txt && streamlit run forecasting/streamlit_app.py --server.port=8501 --server.address=0.0.0.0"
     volumes:
